# Projeto_FastApi

./: .coverage  .gitignore  pyproject.toml
tests/: test_app.py
